Small modal size/layout bugfix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -74,6 +74,7 @@
   flex: 1 1 auto;
   overflow: auto;
   position: relative;
+  width: 100%;
 }
 
 .Footer {
